[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/spriteTiles2.png" type="Texture" id=1]
[ext_resource path="res://goomba.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7.99763, 8.49749 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable_areas"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "walking"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6.5, 5.75 )

[node name="goomba" type="KinematicBody2D"]
position = Vector2( 169, 87 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499695, -0.0121613 )
rotation = 1.5708
shape = SubResource( 11 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 11 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 112, 32, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
autoplay = "walking"
anims/RESET = SubResource( 12 )
anims/dead = SubResource( 15 )
anims/walking = SubResource( 13 )

[node name="killArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killArea"]
position = Vector2( -0.5, -0.25 )
shape = SubResource( 14 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="leftRay" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -9, 0 )

[node name="rightRay" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 9, 0 )

[connection signal="body_entered" from="killArea" to="." method="_on_killArea_body_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
